# src/main/java/edu/school21/shopapi/controller/ClientController.java
@@ -4,6 +4,7 @@ package edu.school21.shopapi.controller;
 import edu.school21.openapi.api.ClientApi;
 import edu.school21.openapi.model.AddressDto;
 import edu.school21.openapi.model.ClientDto;
+import edu.school21.openapi.model.GetClientsPaginationParameter;
 import edu.school21.shopapi.service.ClientService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.RestController;
@@ -28,10 +29,9 @@ public class ClientController implements ClientApi {
     }
 
     @Override
-    public List<ClientDto> getClients(Integer limit, Integer offset) {
-        return clientService.getAllClients(limit, offset);
+    public List<ClientDto> getClients(GetClientsPaginationParameter pagination) {
+        return clientService.getClients(pagination.getLimit(), pagination.getOffset());
     }
-
     @Override
     public List<ClientDto> searchClients(String clientName, String clientSurname) {
         return clientService.getClients(clientName, clientSurname);
@@ -39,7 +39,7 @@ public class ClientController implements ClientApi {
 
     @Override
     public void updateClientAddress(UUID clientId, AddressDto addressDto) {
-
+        clientService.updateClientAddress(clientId, addressDto);
     }
 }
 
